# VibeCoding-Clipboard-keybaord-cleanup

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
Branding/: HammerCleanerIcon.ai
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/clipboard/: poller.ts  rules.ts  sanitizer.ts  signature.ts
src/runtime/: exclusions.ts  settings.ts
src/tray/: menu.ts
src/types/: settings.ts
src/views/: excluded-apps.ts
~/.hammerspoon/clipboard-cleaner/: config.lua
