[package]
name = "clipboard_cleaner"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.10.1", features = [ "tray-icon"] }
tauri-plugin-clipboard-manager = "2.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
objc2 = "0.6.4"
objc2-foundation = "0.3.1"
objc2-app-kit = { version = "0.3.2", features = ["NSRunningApplication"] }

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }
